<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">
        <TextView android:id="@+id/tvTituloPainel"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:textSize="26sp" android:textStyle="bold" />
        <TextView android:id="@+id/tvTotalPainel"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:textSize="16sp" />
        <Button android:id="@+id/btnDataInicial"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/painel_inicio" />
        <Button android:id="@+id/btnDataFinal"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/painel_fim" />
        <Button android:id="@+id/btnRemoverFiltro"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/painel_remover_filtro" />
        <TextView android:id="@+id/tvTotalPeriodo"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:textStyle="bold" android:textSize="18sp" />
        <LinearLayout android:id="@+id/containerRegistros"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical" />
        <Button android:id="@+id/btnVoltarPainel"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="24dp" android:text="@string/voltar_menu" />
    </LinearLayout>
</ScrollView>
